--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-netmon (0.0.1-3) stable; urgency=low
+netmon (0.0.1-4) stable; urgency=low
 
-  fixed bugs in package description
+  fixed some minor bugs and failed dependencies
 
- -- spag <maemo@golwen.net>  Wed, 10 Feb 2010 19:57:02 +0000
+ -- spag <maemo@golwen.net>  Wed, 10 Feb 2010 22:29:03 +0000
