--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-netmon (0.0.1-4) stable; urgency=low
+netmon (0.0.2-1) stable; urgency=low
 
-  fixed some minor bugs and failed dependencies
+  Complete rewrite
 
- -- spag <maemo@golwen.net>  Wed, 10 Feb 2010 22:29:03 +0000
+ -- spag <maemo@golwen.net>  Fri, 12 Feb 2010 11:59:56 +0000
