--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-netmon (0.5-1) stable; urgency=low
+netmon (0.6-1) stable; urgency=low
 
-  Code rewritten.
+  Capacity bar set to 'pulse' when charging. Minor changes in appearance.
 
- -- Peter Kozak <maemo@golwen.net>  Sat, 12 Jun 2010 18:12:06 +0000
+ -- Peter Kozak <maemo@golwen.net>  Mon, 14 Jun 2010 00:46:52 +0000
